Add main comments to the heml file

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
 </head>
 
 <body>
+
+  <!--background with logo-->
   <header class="logo">
     <h1><img src="./images/logo.svg" alt="Splitter" /></h1>
   </header>
+
+  <!--main part container-->
   <main>
+
+    <!--User input with options to choose from-->
     <form class="user__input">
       <form>
         <div class="bill__info">
@@ -55,8 +61,9 @@
         <div class="people_number__container">
           <i class="people_number__icon"></i>
           <input type="number" id="people_number" name="Number of people" min="0" placeholder="0" />
-
       </form>
+
+      <!--User output with reset button-->
       <div class="user__output">
         <div class="tip_result">
           <div class="tip_result--title result">
@@ -77,11 +84,12 @@
   </main>
 
 
-
-  <div class="attribution">
+  <!--Footer with credits-->
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
+
 </body>
 
 </html>
