--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Frontend Mentor | Tip calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
       font-size: 11px;
@@ -46,11 +45,11 @@
         <div class="tip__info">
           <label>select tip Tip %</label>
           <div class="tip__title title">
-            <button button="btn" data-tip="5">5%</button>
-            <button button="btn" data-tip="10">10%</button>
-            <button button="btn" data-tip="15">15%</button>
-            <button button="btn" data-tip="25">25%</button>
-            <button button="btn" data-tip="50">50%</button>
+            <button class='btn' button="btn" data-tip="5">5%</button>
+            <button class='btn' button="btn" data-tip="10">10%</button>
+            <button class='btn' button="btn" data-tip="15">15%</button>
+            <button class='btn' button="btn" data-tip="25">25%</button>
+            <button class='btn' button="btn" data-tip="50">50%</button>
             <input id="custom" type="number" step="1" placeholder="Custom" />
           </div>
         </div>
@@ -89,7 +88,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </footer>
-
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
