Add comments to the css file

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="sum__result total__amount">$0.00</div>
       </div>
-      <div class="btn btn--reset"></div>
+      <button class="btn btn--reset">reset</button>
     </div>
   </main>
 
