--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!--background with logo-->
   <header class="logo">
-    <h1><img src="./images/logo.svg" alt="Splitter" /></h1>
+    <h1><img src="assets/images/logo.svg" alt="Splitter" /></h1>
   </header>
 
   <!--main part container-->
@@ -38,17 +38,17 @@
         <label class="bill__title title" for="amount">Bill</label>
         <div class="bill__container">
           <i class="bill__icon"></i>
-          <input type="number" id="amount" name="Amount to pay" placeholder="0" min="0" value="0" step="0.01" />
+          <input type="number" id="amount" name="Amount to pay" min="0" step="0.01" placeholder="0" />
         </div>
       </div>
       <div class="tip__info">
         <label class="tip__title title" for="custom">Select tip Tip %</label>
         <div class="tip__btns">
-          <button class='btn' button="btn" data-tip="5">5%</button>
-          <button class='btn' button="btn" data-tip="10">10%</button>
-          <button class='btn' button="btn" data-tip="15">15%</button>
-          <button class='btn' button="btn" data-tip="25">25%</button>
-          <button class='btn' button="btn" data-tip="50">50%</button>
+          <button class='btn' data-tip="5">5%</button>
+          <button class='btn' data-tip="10">10%</button>
+          <button class='btn' data-tip="15">15%</button>
+          <button class='btn' data-tip="25">25%</button>
+          <button class='btn' data-tip="50">50%</button>
           <input class='btn' id="custom" type="number" step="1" placeholder="Custom" />
         </div>
       </div>
