Structure styles for user input section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <button class='btn' data-tip="15">15%</button>
           <button class='btn' data-tip="25">25%</button>
           <button class='btn' data-tip="50">50%</button>
-          <input class='btn' id="custom" type="number" step="1" placeholder="Custom" />
+          <input class='btn btn--input' id="custom" type="number" step="1" placeholder="Custom" />
         </div>
       </div>
       <div class="people_number__info">
