Style reset button

--- a/index.html
+++ b/index.html
@@ -57,21 +57,22 @@
         <p id="warning" class="alert__info alert__info--hidden">Can't be zero</p>
         <div class="people_number__container">
           <i class="people_number__icon"></i>
-          <input type="number" id="people_number" name="Number of people" min="0" placeholder="0" />
+          <input type="number" class="input--hidden" id="people_number" name="Number of people" min="0"
+            placeholder="0" />
         </div>
       </div>
 
     </div>
     <!--User output with reset button-->
     <div class="user__output">
-      <div class="tip_result">
+      <div class="tip_result--person tip_result">
         <div class="tip_result--title result">
           <div class="result--main">tip amount</div>
           <div class="result--per_person">/ person</div>
         </div>
         <div class="sum__result tip__amount">$0.00</div>
       </div>
-      <div class="tip_result">
+      <div class="tip_result--total tip_result">
         <div class="total_result--title result">
           <div class="result--main">total</div>
           <div class="result--per_person">/ person</div>
