Add hover effect for the reset btn

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     <div class="user__output">
       <div class="tip_result--person tip_result">
         <div class="tip_result--title result">
-          <div class="result--main">Tip Amount</div>
+          <div class="result--main">tip amount</div>
           <div class="result--per_person">/ person</div>
         </div>
         <div class="sum__result tip__amount">$0.00</div>
       </div>
       <div class="tip_result--total tip_result">
         <div class="total_result--title result">
-          <div class="result--main">Total</div>
+          <div class="result--main">total</div>
           <div class="result--per_person">/ person</div>
         </div>
         <div class="sum__result total__amount">$0.00</div>
