--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <div class="tip__info">
         <label class="tip__title title" for="tip__number_custom">Select tip Tip %</label>
         <div class="tip__btns">
-          <button class='btn' id="tip__number_5">5%</button>
-          <button class='btn' id="tip__number_10">10%</button>
-          <button class='btn' id="tip__number_15">15%</button>
-          <button class='btn' id="tip__number_25">25%</button>
-          <button class='btn' id="tip__number_50">50%</button>
+          <button class='btn btn_tip' id="tip__number_5">5%</button>
+          <button class='btn btn_tip' id="tip__number_10">10%</button>
+          <button class='btn btn_tip' id="tip__number_15">15%</button>
+          <button class='btn btn_tip' id="tip__number_25">25%</button>
+          <button class='btn btn_tip' id="tip__number_50">50%</button>
           <input class='btn btn--input' id="tip__number_custom" type="number" step="1" placeholder="Custom" />
         </div>
       </div>
