--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <div class="tip__info">
         <label class="tip__title title" for="tip__number_custom">Select tip Tip %</label>
         <div class="tip__btns">
-          <button class='btn btn_tip' id="tip__number_5">5%</button>
-          <button class='btn btn_tip' id="tip__number_10">10%</button>
-          <button class='btn btn_tip' id="tip__number_15">15%</button>
-          <button class='btn btn_tip' id="tip__number_25">25%</button>
-          <button class='btn btn_tip' id="tip__number_50">50%</button>
+          <button class='btn btn_tip' data-tip="5" id="tip__number_5">5%</button>
+          <button class='btn btn_tip' data-tip="10" id="tip__number_10">10%</button>
+          <button class='btn btn_tip' data-tip="15" id="tip__number_15">15%</button>
+          <button class='btn btn_tip' data-tip="25" id="tip__number_25">25%</button>
+          <button class='btn btn_tip' data-tip="50" id="tip__number_50">50%</button>
           <input class='btn btn--input' id="tip__number_custom" type="number" step="1" placeholder="Custom" />
         </div>
       </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="sum__result total__amount">$0.00</div>
       </div>
-      <button class="btn btn--reset">reset</button>
+      <button class="btn btn--reset" id="btn__reset">reset</button>
     </div>
   </main>
 
