Add id for outputs

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
           <div class="result--main">tip amount</div>
           <div class="result--per_person">/ person</div>
         </div>
-        <div class="sum__result tip__amount">$0.00</div>
+        <div class="sum__result tip__amount" id="person__amount">$0.00</div>
       </div>
       <div class="tip_result--total tip_result">
         <div class="total_result--title result">
           <div class="result--main">total</div>
           <div class="result--per_person">/ person</div>
         </div>
-        <div class="sum__result total__amount">$0.00</div>
+        <div class="sum__result total__amount" id="total__amount">$0.00</div>
       </div>
       <button class="btn btn--reset" id="btn__reset">reset</button>
     </div>
