Add meta data to the html file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
+  <meta name="description" content="the solution to the tip calculator app from frontend mentor" />
+  <meta name="keywords" content="tip calculator app, frontend mentor, challenge, flexbox, grid, javascript" />
+  <meta name="author" content="Frontend Mentor, Iuliia Konovalova" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Frontend Mentor | Tip calculator app</title>
