--- a/index.html
+++ b/index.html
@@ -11,16 +11,6 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Frontend Mentor | Tip calculator app</title>
 
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -84,11 +74,15 @@
     </div>
   </main>
 
-
-  <!--Footer with credits-->
+  <!--Credit section-->
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="credits_frontend-mentor">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" rel="noopener" target="_blank">Frontend
+        Mentor</a>.
+    </div>
+    <div class="credits_myself">
+      Coded by <a href="https://github.com/IuliiaKonovalova" rel="noopener" target="_blank">Iulia Konovalova</a>.
+    </div>
   </footer>
   <script src="assets/js/script.js"></script>
 </body>
