delete unsed code in html

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <div class="tip__info">
         <label class="tip__title title" for="tip__number_custom">Select tip Tip %</label>
         <div class="tip__btns">
-          <button class='btn btn_tip' data-tip="5" id="tip__number_5" value='1.05'>5%</button>
-          <button class='btn btn_tip' data-tip="10" id="tip__number_10" value='1.1'>10%</button>
-          <button class='btn btn_tip' data-tip="15" id="tip__number_15" value='1.15'>15%</button>
-          <button class='btn btn_tip' data-tip="25" id="tip__number_25" value='1.25'>25%</button>
-          <button class='btn btn_tip' data-tip="50" id="tip__number_50" value='1.5'>50%</button>
+          <button class='btn btn_tip' value='1.05'>5%</button>
+          <button class='btn btn_tip' value='1.1'>10%</button>
+          <button class='btn btn_tip' value='1.15'>15%</button>
+          <button class='btn btn_tip' value='1.25'>25%</button>
+          <button class='btn btn_tip' value='1.5'>50%</button>
           <input class='btn btn--input' id="tip__number_custom" type="number" step="1" placeholder="Custom" />
         </div>
       </div>
