Add folder for documentation and moved disign folder into documentation folder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="the solution to the tip calculator app from frontend mentor" />
   <meta name="keywords" content="tip calculator app, frontend mentor, challenge, flexbox, grid, javascript" />
   <meta name="author" content="Frontend Mentor, Iuliia Konovalova" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Frontend Mentor | Tip calculator app</title>
 
